# livemedia

./: .gitignore  CMakeLists.txt  README.md  build_win.bat
BasicUsageEnvironment/: BasicUsageEnvironment.mak  CMakeLists.txt
UsageEnvironment/: CMakeLists.txt  UsageEnvironment.mak
groupsock/: CMakeLists.txt  GroupsockHelper.cpp  NetAddress.cpp  getifaddr.c  groupsock.mak  ifaddrs.h
hlsProxy/: hlsProxy.mak
liveMedia/: CMakeLists.txt  liveMedia.mak
mediaServer/: mediaServer.mak
proxyServer/: proxyServer.mak
testProgs/: CMakeLists.txt  testProgs.mak
