
include_directories(include)

set(headers
  include/AC3AudioFileServerMediaSubsession.hh
  include/AC3AudioRTPSink.hh
  include/AC3AudioRTPSource.hh
  include/AC3AudioStreamFramer.hh
  include/ADTSAudioFileServerMediaSubsession.hh
  include/ADTSAudioFileSource.hh
  include/ADTSAudioStreamDiscreteFramer.hh
  include/AMRAudioFileServerMediaSubsession.hh
  include/AMRAudioFileSink.hh
  include/AMRAudioFileSource.hh
  include/AMRAudioRTPSink.hh
  include/AMRAudioRTPSource.hh
  include/AMRAudioSource.hh
  include/AudioInputDevice.hh
  include/AudioRTPSink.hh
  include/AVIFileSink.hh
  include/Base64.hh
  include/BasicUDPSink.hh
  include/BasicUDPSource.hh
  include/BitVector.hh
  include/ByteStreamFileSource.hh
  include/ByteStreamMemoryBufferSource.hh
  include/ByteStreamMultiFileSource.hh
  include/DeviceSource.hh
  include/DigestAuthentication.hh
  include/DVVideoFileServerMediaSubsession.hh
  include/DVVideoRTPSink.hh
  include/DVVideoRTPSource.hh
  include/DVVideoStreamFramer.hh
  include/FileServerMediaSubsession.hh
  include/FileSink.hh
  include/FramedFileSource.hh
  include/FramedFilter.hh
  include/FramedSource.hh
  include/GenericMediaServer.hh
  include/GSMAudioRTPSink.hh
  include/H261VideoRTPSource.hh
  include/H263plusVideoFileServerMediaSubsession.hh
  include/H263plusVideoRTPSink.hh
  include/H263plusVideoRTPSource.hh
  include/H263plusVideoStreamFramer.hh
  include/H264or5VideoFileSink.hh
  include/H264or5VideoRTPSink.hh
  include/H264or5VideoStreamDiscreteFramer.hh
  include/H264or5VideoStreamFramer.hh
  include/H264VideoFileServerMediaSubsession.hh
  include/H264VideoFileSink.hh
  include/H264VideoRTPSink.hh
  include/H264VideoRTPSource.hh
  include/H264VideoStreamDiscreteFramer.hh
  include/H264VideoStreamFramer.hh
  include/H265VideoFileServerMediaSubsession.hh
  include/H265VideoFileSink.hh
  include/H265VideoRTPSink.hh
  include/H265VideoRTPSource.hh
  include/H265VideoStreamDiscreteFramer.hh
  include/H265VideoStreamFramer.hh
  include/HLSSegmenter.hh
  include/HMAC_hash.hh
  include/HMAC_SHA1.hh
  include/InputFile.hh
  include/JPEG2000VideoRTPSink.hh
  include/JPEG2000VideoRTPSource.hh
  include/JPEGVideoRTPSink.hh
  include/JPEGVideoRTPSource.hh
  include/JPEGVideoSource.hh
  include/liveMedia.hh
  include/liveMedia_version.hh
  include/Locale.hh
  include/MatroskaFile.hh
  include/MatroskaFileServerDemux.hh
  include/Media.hh
  include/MediaSession.hh
  include/MediaSink.hh
  include/MediaSource.hh
  include/MediaTranscodingTable.hh
  include/MIKEY.hh
  include/MP3ADU.hh
  include/MP3ADUinterleaving.hh
  include/MP3ADURTPSink.hh
  include/MP3ADURTPSource.hh
  include/MP3ADUTranscoder.hh
  include/MP3AudioFileServerMediaSubsession.hh
  include/MP3FileSource.hh
  include/MP3Transcoder.hh
  include/MPEG1or2AudioRTPSink.hh
  include/MPEG1or2AudioRTPSource.hh
  include/MPEG1or2AudioStreamFramer.hh
  include/MPEG1or2Demux.hh
  include/MPEG1or2DemuxedElementaryStream.hh
  include/MPEG1or2DemuxedServerMediaSubsession.hh
  include/MPEG1or2FileServerDemux.hh
  include/MPEG1or2VideoFileServerMediaSubsession.hh
  include/MPEG1or2VideoRTPSink.hh
  include/MPEG1or2VideoRTPSource.hh
  include/MPEG1or2VideoStreamDiscreteFramer.hh
  include/MPEG1or2VideoStreamFramer.hh
  include/MPEG2IndexFromTransportStream.hh
  include/MPEG2TransportFileServerMediaSubsession.hh
  include/MPEG2TransportStreamAccumulator.hh
  include/MPEG2TransportStreamDemux.hh
  include/MPEG2TransportStreamFramer.hh
  include/MPEG2TransportStreamFromESSource.hh
  include/MPEG2TransportStreamFromPESSource.hh
  include/MPEG2TransportStreamIndexFile.hh
  include/MPEG2TransportStreamMultiplexor.hh
  include/MPEG2TransportStreamTrickModeFilter.hh
  include/MPEG2TransportUDPServerMediaSubsession.hh
  include/MPEG4ESVideoRTPSink.hh
  include/MPEG4ESVideoRTPSource.hh
  include/MPEG4GenericRTPSink.hh
  include/MPEG4GenericRTPSource.hh
  include/MPEG4LATMAudioRTPSink.hh
  include/MPEG4LATMAudioRTPSource.hh
  include/MPEG4VideoFileServerMediaSubsession.hh
  include/MPEG4VideoStreamDiscreteFramer.hh
  include/MPEG4VideoStreamFramer.hh
  include/MPEGVideoStreamFramer.hh
  include/MultiFramedRTPSink.hh
  include/MultiFramedRTPSource.hh
  include/OggFile.hh
  include/OggFileServerDemux.hh
  include/OggFileSink.hh
  include/OnDemandServerMediaSubsession.hh
  include/ourMD5.hh
  include/OutputFile.hh
  include/PassiveServerMediaSubsession.hh
  include/ProxyServerMediaSession.hh
  include/QCELPAudioRTPSource.hh
  include/QuickTimeFileSink.hh
  include/QuickTimeGenericRTPSource.hh
  include/RawVideoFrameParameters.hh
  include/RawVideoRTPSink.hh
  include/RawVideoRTPSource.hh
  include/RTCP.hh
  include/RTPInterface.hh
  include/RTPSink.hh
  include/RTPSource.hh
  include/RTSPClient.hh
  include/RTSPCommon.hh
  include/RTSPRegisterSender.hh
  include/RTSPServer.hh
  include/ServerMediaSession.hh
  include/SimpleRTPSink.hh
  include/SimpleRTPSource.hh
  include/SIPClient.hh
  include/SRTPCryptographicContext.hh
  include/StreamReplicator.hh
  include/T140TextRTPSink.hh
  include/TextRTPSink.hh
  include/TheoraVideoRTPSink.hh
  include/TheoraVideoRTPSource.hh
  include/TLSState.hh
  include/uLawAudioFilter.hh
  include/VideoRTPSink.hh
  include/VorbisAudioRTPSink.hh
  include/VorbisAudioRTPSource.hh
  include/VP8VideoRTPSink.hh
  include/VP8VideoRTPSource.hh
  include/VP9VideoRTPSink.hh
  include/VP9VideoRTPSource.hh
  include/WAVAudioFileServerMediaSubsession.hh
  include/WAVAudioFileSource.hh
  )

set(sources
  StreamParser.hh
  OggFileServerMediaSubsession.hh
  OggFileParser.hh
  OggDemuxedTrack.hh
  MPEGVideoStreamParser.hh
  MPEG2TransportStreamParser.hh
  MPEG2TransportStreamDemuxedTrack.hh
  MP3StreamState.hh
  MP3InternalsHuffman.hh
  MP3Internals.hh
  MP3AudioMatroskaFileServerMediaSubsession.hh
  MP3ADUdescriptor.hh
  MatroskaFileServerMediaSubsession.hh
  MatroskaFileParser.hh
  MatroskaDemuxedTrack.hh
  H263plusVideoStreamParser.hh
  EBMLNumber.hh
  rtcp_from_spec.h
  WAVAudioFileSource.cpp
  WAVAudioFileServerMediaSubsession.cpp
  VP9VideoRTPSource.cpp
  VP9VideoRTPSink.cpp
  VP8VideoRTPSource.cpp
  VP8VideoRTPSink.cpp
  VorbisAudioRTPSource.cpp
  VorbisAudioRTPSink.cpp
  VideoRTPSink.cpp
  uLawAudioFilter.cpp
  TLSState.cpp
  TheoraVideoRTPSource.cpp
  TheoraVideoRTPSink.cpp
  TextRTPSink.cpp
  T140TextRTPSink.cpp
  StreamReplicator.cpp
  StreamParser.cpp
  SRTPCryptographicContext.cpp
  SIPClient.cpp
  SimpleRTPSource.cpp
  SimpleRTPSink.cpp
  ServerMediaSession.cpp
  RTSPServerRegister.cpp
  RTSPServer.cpp
  RTSPRegisterSender.cpp
  RTSPCommon.cpp
  RTSPClient.cpp
  RTPSource.cpp
  RTPSink.cpp
  RTPInterface.cpp
  RTCP.cpp
  RawVideoRTPSource.cpp
  RawVideoRTPSink.cpp
  QuickTimeGenericRTPSource.cpp
  QuickTimeFileSink.cpp
  QCELPAudioRTPSource.cpp
  ProxyServerMediaSession.cpp
  PassiveServerMediaSubsession.cpp
  OutputFile.cpp
  ourMD5.cpp
  OnDemandServerMediaSubsession.cpp
  OggFileSink.cpp
  OggFileServerMediaSubsession.cpp
  OggFileServerDemux.cpp
  OggFileParser.cpp
  OggFile.cpp
  OggDemuxedTrack.cpp
  MultiFramedRTPSource.cpp
  MultiFramedRTPSink.cpp
  MPEGVideoStreamParser.cpp
  MPEGVideoStreamFramer.cpp
  MPEG4VideoStreamFramer.cpp
  MPEG4VideoStreamDiscreteFramer.cpp
  MPEG4VideoFileServerMediaSubsession.cpp
  MPEG4LATMAudioRTPSource.cpp
  MPEG4LATMAudioRTPSink.cpp
  MPEG4GenericRTPSource.cpp
  MPEG4GenericRTPSink.cpp
  MPEG4ESVideoRTPSource.cpp
  MPEG4ESVideoRTPSink.cpp
  MPEG2TransportUDPServerMediaSubsession.cpp
  MPEG2TransportStreamTrickModeFilter.cpp
  MPEG2TransportStreamParser_STREAM.cpp
  MPEG2TransportStreamParser_PMT.cpp
  MPEG2TransportStreamParser_PAT.cpp
  MPEG2TransportStreamParser.cpp
  MPEG2TransportStreamMultiplexor.cpp
  MPEG2TransportStreamIndexFile.cpp
  MPEG2TransportStreamFromPESSource.cpp
  MPEG2TransportStreamFromESSource.cpp
  MPEG2TransportStreamFramer.cpp
  MPEG2TransportStreamDemuxedTrack.cpp
  MPEG2TransportStreamDemux.cpp
  MPEG2TransportStreamAccumulator.cpp
  MPEG2TransportFileServerMediaSubsession.cpp
  MPEG2IndexFromTransportStream.cpp
  MPEG1or2VideoStreamFramer.cpp
  MPEG1or2VideoStreamDiscreteFramer.cpp
  MPEG1or2VideoRTPSource.cpp
  MPEG1or2VideoRTPSink.cpp
  MPEG1or2VideoFileServerMediaSubsession.cpp
  MPEG1or2FileServerDemux.cpp
  MPEG1or2DemuxedServerMediaSubsession.cpp
  MPEG1or2DemuxedElementaryStream.cpp
  MPEG1or2Demux.cpp
  MPEG1or2AudioStreamFramer.cpp
  MPEG1or2AudioRTPSource.cpp
  MPEG1or2AudioRTPSink.cpp
  MP3Transcoder.cpp
  MP3StreamState.cpp
  MP3InternalsHuffmanTable.cpp
  MP3InternalsHuffman.cpp
  MP3Internals.cpp
  MP3FileSource.cpp
  MP3AudioMatroskaFileServerMediaSubsession.cpp
  MP3AudioFileServerMediaSubsession.cpp
  MP3ADUTranscoder.cpp
  MP3ADURTPSource.cpp
  MP3ADURTPSink.cpp
  MP3ADUinterleaving.cpp
  MP3ADUdescriptor.cpp
  MP3ADU.cpp
  MIKEY.cpp
  MediaSource.cpp
  MediaSink.cpp
  MediaSession.cpp
  Media.cpp
  MatroskaFileServerMediaSubsession.cpp
  MatroskaFileServerDemux.cpp
  MatroskaFileParser.cpp
  MatroskaFile.cpp
  MatroskaDemuxedTrack.cpp
  Locale.cpp
  JPEGVideoSource.cpp
  JPEGVideoRTPSource.cpp
  JPEGVideoRTPSink.cpp
  JPEG2000VideoRTPSource.cpp
  JPEG2000VideoRTPSink.cpp
  InputFile.cpp
  HMAC_SHA1.cpp
  HLSSegmenter.cpp
  H265VideoStreamFramer.cpp
  H265VideoStreamDiscreteFramer.cpp
  H265VideoRTPSource.cpp
  H265VideoRTPSink.cpp
  H265VideoFileSink.cpp
  H265VideoFileServerMediaSubsession.cpp
  H264VideoStreamFramer.cpp
  H264VideoStreamDiscreteFramer.cpp
  H264VideoRTPSource.cpp
  H264VideoRTPSink.cpp
  H264VideoFileSink.cpp
  H264VideoFileServerMediaSubsession.cpp
  H264or5VideoStreamFramer.cpp
  H264or5VideoStreamDiscreteFramer.cpp
  H264or5VideoRTPSink.cpp
  H264or5VideoFileSink.cpp
  H263plusVideoStreamParser.cpp
  H263plusVideoStreamFramer.cpp
  H263plusVideoRTPSource.cpp
  H263plusVideoRTPSink.cpp
  H263plusVideoFileServerMediaSubsession.cpp
  H261VideoRTPSource.cpp
  GSMAudioRTPSink.cpp
  GenericMediaServer.cpp
  FramedSource.cpp
  FramedFilter.cpp
  FramedFileSource.cpp
  FileSink.cpp
  FileServerMediaSubsession.cpp
  EBMLNumber.cpp
  DVVideoStreamFramer.cpp
  DVVideoRTPSource.cpp
  DVVideoRTPSink.cpp
  DVVideoFileServerMediaSubsession.cpp
  DigestAuthentication.cpp
  DeviceSource.cpp
  ByteStreamMultiFileSource.cpp
  ByteStreamMemoryBufferSource.cpp
  ByteStreamFileSource.cpp
  BitVector.cpp
  BasicUDPSource.cpp
  BasicUDPSink.cpp
  Base64.cpp
  AVIFileSink.cpp
  AudioRTPSink.cpp
  AudioInputDevice.cpp
  AMRAudioSource.cpp
  AMRAudioRTPSource.cpp
  AMRAudioRTPSink.cpp
  AMRAudioFileSource.cpp
  AMRAudioFileSink.cpp
  AMRAudioFileServerMediaSubsession.cpp
  ADTSAudioStreamDiscreteFramer.cpp
  ADTSAudioFileSource.cpp
  ADTSAudioFileServerMediaSubsession.cpp
  AC3AudioStreamFramer.cpp
  AC3AudioRTPSource.cpp
  AC3AudioRTPSink.cpp
  AC3AudioFileServerMediaSubsession.cpp
  rtcp_from_spec.c
  )

add_library(livemedia
  ${headers} ${sources}
  )